= 2.3.4 - 2024-01-21 =

- Don't hide admin notices of WP Crontrol plugin.

= 2.3.3 - 2024-01-12 =

- More fixes related to admin notices. Sorry.

= 2.3.2 - 2024-01-11 =

- Fix: admin notices in `post.php` and `post-new.php`

= 2.3.1 - 2023-12-16 =

- Fix: message about "connection lost" when "hide admin notices" is enabled
- Fix: don't hide "Settings saved" messages.

= 2.3.0 - 2023-11-19 =

- Option to disable RSS feeds
- Option to disable right click in frontend
- Option to remove language switcher from login page
- Option to disable WP CRON (via `DISABLE_WP_CRON` constant)

= 2.2.0 - 2023-09-21 =

- New security header: "Referrer-Policy" (value: `strict-origin-when-cross-origin`)
- New security header: "Permissions-Policy" (value: `geolocation=(), microphone=(), camera=(), interest-cohort=()`)

= 2.1.0 - 2023-09-19 =

* Option to disable comments (only in pages and blog posts)
* Option to hide annoying messages in admin panel
* Warns when **WP_DEVELOPMENT_MODE** constant is activated

= 2.0.0 - 2023-08-22 =

* The plugin now requires PHP 7.4+
* Clear the plugin options when the plugin is uninstalled.
* Option to display PHP version in admin footer
* Option to disable or limit the Heartbeat API

= 1.9.2 - 2023-01-18 =

* Fix settings link.

= 1.9.1 - 2023-01-11 =

* Removed "Disallow your site in iframes" option. Utilize the "Security Headers" option instead.

= 1.9.0 - 2023-01-10 =

* Feature: Disable jQuery Migrate (enabled by default).
* Feature: Security Headers (disabled by default).
* Tweak: improve some options.

= 1.8.0 - 2022-12-11 =

* Security: Now is possible disallow to render your site in a `<frame>`, `<iframe>`, `<embed>` or `<object>` outside of your site. Useful to avoid **click-jacking** attacks.
* Security: Now is possible disable the `/users` endpoint in the REST API, to prevent users enumeration.

= 1.7.1 - 2022-07-29 =

* Fix: Option 'Remove Dashboard "welcome panel"' was not working.
* Misc: Improve colors on warning about debug constants.
