@@ -1,3 +1,7 @@
+= next - XXXX-XX-XX =
+
+- Option to limit or disable post revisions.
+
 = 2.3.4 - 2024-01-21 =
 
 - Don't hide admin notices of WP Crontrol plugin.
